--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link 
       rel="icon" 
       <!-- type="image/svg+xml"  -->
-      href="https://www.google.com/imgres?q=sorting%20bars&imgurl=https%3A%2F%2Fdocs.tibco.com%2Fpub%2Fsfire-cloud%2F14.4.2%2Fdoc%2Fhtml%2Fen-US%2FTIB_sfire_client%2Fclient%2Fimages%2Fsorting_bars_reverse.png&imgrefurl=https%3A%2F%2Fdocs.tibco.com%2Fpub%2Fsfire-cloud%2F14.4.2%2Fdoc%2Fhtml%2Fen-US%2FTIB_sfire_client%2Fclient%2Ftopics%2Fen-US%2Fsorting_bars_by_value.html&docid=1m6tgh1w7WOK_M&tbnid=n7qHmnFWfuUWkM&vet=12ahUKEwiNx7_ItJqQAxUCdfUHHR_0OFkQM3oECBgQAA..i&w=294&h=259&hcb=2&ved=2ahUKEwiNx7_ItJqQAxUCdfUHHR_0OFkQM3oECBgQAA" 
+      <!-- href="https://www.google.com/imgres?q=sorting%20bars&imgurl=https%3A%2F%2Fdocs.tibco.com%2Fpub%2Fsfire-cloud%2F14.4.2%2Fdoc%2Fhtml%2Fen-US%2FTIB_sfire_client%2Fclient%2Fimages%2Fsorting_bars_reverse.png&imgrefurl=https%3A%2F%2Fdocs.tibco.com%2Fpub%2Fsfire-cloud%2F14.4.2%2Fdoc%2Fhtml%2Fen-US%2FTIB_sfire_client%2Fclient%2Ftopics%2Fen-US%2Fsorting_bars_by_value.html&docid=1m6tgh1w7WOK_M&tbnid=n7qHmnFWfuUWkM&vet=12ahUKEwiNx7_ItJqQAxUCdfUHHR_0OFkQM3oECBgQAA..i&w=294&h=259&hcb=2&ved=2ahUKEwiNx7_ItJqQAxUCdfUHHR_0OFkQM3oECBgQAA"  -->
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sorting-visualizer</title>
